closing support #888. Agenda is XHTML compliant. Furthermore, many Java warnings have been removed and some HTML fragments simplified by using divs and CSS (agenda.jsp).
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@2060 a8e77078-a1c7-4fa5-b8fc-53c5178a176c